# sui-prover-private

./: .gitignore  Cargo.toml  README.MD
crates/intermediate-theorem-format/: Cargo.toml
crates/intermediate-theorem-format/src/: lib.rs  utils.rs
crates/intermediate-theorem-format/src/analysis/: callee_requires_entry.rs  callee_requires_precond.rs  cleanup.rs  constant_folding.rs  dead_code_removal.rs  dead_param_elimination.rs  decompose_aborts.rs  deep_nesting.rs  dependency_order.rs  dynamic_field_rewriting.rs  early_return.rs  early_return_elimination.rs  equation_lemmas.rs  frame_lemmas.rs  ghost_threading.rs  import_collection.rs  inject_arithmetic_aborts.rs  lean_termination.rs  logical_simplification.rs  loop_body_extraction.rs  loop_inv_entry.rs  mod.rs  mutable_threading.rs  native_shadowing.rs  nested_loop_termination.rs  post_state_rename.rs  prop_inference.rs  spec_extraction.rs  spec_type_conversion.rs  stored_value_invariants.rs  temp_inlining.rs  tx_context_natives.rs  validation.rs  world_threading.rs
crates/intermediate-theorem-format/src/data/: conversion.rs  functions.rs  ir.rs  mod.rs  structure.rs  types.rs  variables.rs
crates/move-prover-lean-backend/: Cargo.toml
crates/move-prover-lean-backend/lemmas/: README.md
crates/move-prover-lean-backend/lemmas/Prelude/: AbortsTactics.lean  BoundedArith.lean  BoundedNat.lean  Combinatorics.lean  Helpers.lean  LoopTermination.lean  (+9 more)
crates/move-prover-lean-backend/src/: backend.rs  escape.rs  lib.rs  native_ghost_fields.rs  prelude.rs
crates/stackless-to-intermediate/: Cargo.toml
crates/stackless-to-intermediate/src/: lib.rs  package_utils.rs  program_builder.rs
(+97 files in other folders)
