[package]
name = "stackless-to-intermediate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
move-binary-format.workspace = true
move-compiler.workspace = true
move-model.workspace = true
move-stackless-bytecode.workspace = true
intermediate-theorem-format.workspace = true

log.workspace = true
toml.workspace = true
indexmap.workspace = true
ethnum.workspace = true
petgraph.workspace = true
